--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -15,6 +15,7 @@
         <header class="site-header">
                 <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
                   <div class="container">
+                
                     <a class="navbar-brand mr-4" href="/">ASK ME</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
@@ -26,8 +27,15 @@
                       </div>
                       <!-- Navbar Right Side -->
                       <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="/login">Login</a>
-                        <a class="nav-item nav-link" href="/Register">Register</a>
+                        {% if current_user %}
+                        <a class="nav-item nav-link" href="{{ url_for('quest') }}">New Question</a>
+                        <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
+
+                        <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        {% else %} 
+                        <a class="nav-item nav-link" href="{{ url_for('Register') }}">Register</a>
+                        <a class="nav-item nav-link" href="{{ url_for('login') }}">LogIn</a>
+                        {%endif%}
                       </div>
                     </div>
                   </div>
