--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -9,7 +9,8 @@
   }
   
   .bg-steel {
-    background-color: #5f788a;
+    /* background-color: #cd5c5c; */
+     background-color: #4B64FA;
   }
   
   .site-header .navbar-nav .nav-link {
