--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -14,8 +14,9 @@
 <body>
         <header class="site-header">
                 <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+                  
                   <div class="container">
-                
+                      <a><img src="/static/avenger.png" height="50" width="50"></a>
                     <a class="navbar-brand mr-4" href="/">ASK ME</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
